src/assets/scss/components/_slick.scss
@import '../vendor/icomoon/variables';
$arrow-margin-xxlarge: 25px;
$peekaboo-space: 30px;
$slide-margin-mobile: 10px;
$slide-margin: map-get($grid-container-padding,'medium');

$slide-margin-offset: 15; // to prevent shadow overflow issues

.slick-list{
	margin-top: rem-calc(-1*$slide-margin-offset);
	margin-bottom: rem-calc(-1*$slide-margin-offset);
	@include breakpoint(small only){
			margin-left: rem-calc(-1*$slide-margin-mobile);
			margin-right: rem-calc(-1*$slide-margin-mobile);
	}
}

.slick-slide{
	margin: rem-calc($slide-margin-offset) rem-calc($slide-margin-mobile);
	@include breakpoint(large){
		margin: rem-calc($slide-margin-offset) rem-calc(0.5*$slide-margin);
	}
	.card{
		margin-bottom: 0;
	}
}

$toggle-spacing: 18;
.slick-toggle{
	color: $primary-color;
	cursor: pointer;
	order: 3;
	position: relative;
	margin-left: rem-calc($toggle-spacing);
	height: rem-calc(23);
	display: inline-block;
	width: rem-calc(18);
	@include breakpoint(large){
		font-size: rem-calc(30);
		height: rem-calc(35);
		width: rem-calc(25);
	}
	&:before{
		content: "";
		display: block;
		position: absolute;
		background-color: $tertiary-color;
		height: 100%;
		width: rem-calc(1);
		left: rem-calc(-1*$toggle-spacing);
		top: 0;
	}
	.active, .inactive{
		left: 0;
		@include vertical-center;
	}

	.inactive{
		display: none;
	}
}


.slick-wrap{
	position: relative;
}

.slick-slider{
	&--equalize{
		.slick-track{
			display: flex !important;
		}
		.slick-slide{
			//margin: 0;
			height: inherit !important;
			display: flex !important;
			align-items: center;
		}
	}
	&.has-peekaboo{
		@include breakpoint(small only){
			overflow: hidden;
			padding-right: rem-calc($peekaboo-space);
			margin-right: -0.5*map-get($grid-container-padding,'small');
			.slick-list{
				overflow: visible !important;
			}
		}
	}
	&:not(.has-pagers){
		+ .slick-nav{
			display: none;
		}
	}

	@include breakpoint(small only) {
		+ .slick-nav{
			// position: relative;


				.slick-dots{

					counter-reset: pages;
//					margin-left: 0;
					li{
						counter-increment: pages;
						padding: 0 !important;
						&:not(.slick-active){
							display: none;
						}
						&.slick-active{
							//padding-top: rem-calc(3);
							button{
								border-radius: 0;
								width: auto;
								height: auto;
								background-color: transparent;
								font-size: 0;
								border: 0;
								color: transparent;
								line-height: 1;
								&:after{
									font-size: rem-calc(16);
									content: attr(aria-label);
									color: $black;
								}
							}
						}
					}

				}



		}
	}

}


.slick-dots {
	display: flex;
	align-items: center;
	justify-content: center;
	margin: 0;
	@include spacer(margin,x,2.5);
	list-style-type: none;

	li {

		&,
		&:last-child {
			@include spacer(padding,x,1.5);
			//padding: rem-calc(15 $spacer*3/2);
			//padding-bottom: rem-calc(14) !important;

			// @include breakpoint(large) {
			// 	padding-top: rem-calc(11);
			// 	padding-bottom: rem-calc(11) !important;
			// }
		}

		button{
			@include size(rem-calc($spacer-mobile*3));
			@include breakpoint(medium){
				@include size(rem-calc($spacer*3));
			}
			display: block;
			font-size: 0;
			line-height: 0;
			border-radius: 50%;
			border: 2px solid $primary-color;
			background: $primary-color;
			cursor: pointer;
		}

		&.slick-active,
		&.active {

			button {
				background-color: $white;
				cursor: default;
			}
		}

		&:before {
			content: "";
			display: none;
		}
	}

}
.slick-arrow {
	border-radius: 50%;
	border: 0;
	background: transparent;
	display: flex;
	align-items: center;
	justify-content: center;

	margin-left: 0;
	margin-right: rem-calc(17);
	font-size: 0;
	line-height: 0;
	color: $white;
	text-decoration: none;
	cursor: pointer;
	background-color: $primary-color;

	@include size(40);
	text-align: center;

	&:before {

		line-height: 1;
		font-family: $icomoon-font-family;
		font-size: rem-calc(10);
		@include breakpoint(large) {
			font-weight: normal;
			font-size: rem-calc(14);

		}
	}

	&.slick-disabled{
		background-color: $input-background-disabled;
		&:before{
			color: $medium-gray;
		}
	}

	&.slick-prev {

		&:before {
			content: $icon-chevron-left;
		}
	}

	&.slick-next {
		&:before {
			content: $icon-chevron-right;
		}
	}

	&.slick-disabled {

		&,
		&:focus {
			color: $light-gray;
			pointer-events: none;

			html:not(.touch-device) & {
				color: $light-gray;
			}
		}
	}
	&:hover{
		color: map-get($additional-palette,'secondary-darker');
	}
}

.slick-nav{
	@include spacer(margin,top,4);
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;

	.slick-prev {
		order: 1;
		margin-right: 0;
	}

	.slick-next {
		order: 3;
		margin-left: 0;
	}

	.slick-dots {
		order: 2;
		flex-wrap: wrap;
		max-width: calc(100% - 68px);


	}


	.slick-slider.is-paused + &{

		.slick-toggle{
			.inactive{
				display: block;
			}
			.active{
				display: none;
			}
		}
	}



	.slick-slider.is-paused + &{

		.slick-toggle{
			.inactive{
				display: block;
			}
			.active{
				display: none;
			}
		}
	}


}

.js-slick--center{
	$transition-duration: 0.75s;
	$slide-margin: 80;
	$slide-transform: 80;
	$slide-width: 450;
	$slide-current-diff: 230;
	$curr-width: $slide-width + $slide-current-diff;
	$curr-section-offset: 80;
	$image-ratio: 1.6;


	.slick-slide{
		margin: rem-calc($slide-margin-offset) rem-calc($slide-margin-mobile);
	}
	@include breakpoint(medium){
		.slick-list{
			overflow: visible;
			//display: flex;
		}
		.slick-slide{
			margin: rem-calc($slide-margin-offset) rem-calc($slide-margin);
			//max-width: 100vw;
			width: rem-calc($slide-width);
			transform: translateY(#{rem-calc($slide-transform)});
			transition: $transition-duration transform, $transition-duration width, $transition-duration margin;
			will-change: margin, transform, width;
			.card-section{
				will-change: padding;
				transition: $transition-duration padding;
			}

			&:not(.slick-current){
				margin-bottom: rem-calc($curr-width/$image-ratio - $slide-width/$image-ratio - $slide-margin-offset);
				.card-section{
					@include spacer(padding,y,3);
					@include spacer(padding,x,4);
				}
				.card-image{
					transition: $transition-duration margin;
				}
				.h4{
					display: block; // selectors to hide
					will-change: opacity, max-height;
					transition: $transition-duration max-height, $transition-duration opacity;
					opacity: 0;
					max-height: 0;
					overflow: hidden;
				}
				&:after{
					transition: $transition-duration bottom;
				}
			}


			&.slick-current{
				z-index: 2;
				position: relative;
				width: rem-calc($curr-width);
				margin: 0 #{$slide-margin*2 - ($slide-current-diff/2 + $slide-margin)}px;
				transform: translateY(#{rem-calc(0)});

				.card--special{
					box-shadow: $global-box-shadow;
					.card-section{
						@include spacer(padding,all,5);
					}
					.card-image{
						margin-bottom: rem-calc($curr-section-offset);
					}
					&:after{
						height: 70%;
						bottom: rem-calc(80);
					}
				}
				// .card-section{
				// 	background-color: $secondary-color;
				// 	color: $white;
				// }
				.card-image, .button{  // selectors to hide
					max-height: rem-calc(1000);
					opacity: 1;
				}
			}

		}
	}

}

